fix(components): align items in primary toolbar filter group (#2360)
Add align-items: center to .ins-c-primary-toolbar__group-filter
to properly center filter items vertically.

--- a/packages/components/src/PrimaryToolbar/primary-toolbar.scss
+++ b/packages/components/src/PrimaryToolbar/primary-toolbar.scss
@@ -19,6 +19,7 @@
   }
   .ins-c-primary-toolbar__group-filter {
     flex-grow: initial;
+    align-items: center;
     .ins-c-primary-toolbar__filter {
       flex: initial;
     }
